--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ GROQ_API_ORG=
 
 # Media Secrets
 GIPHY_API_KEY=
+
+# Ports
+DASHBOARD_PORT=3000
+SERVER_PORT=3001
+
+# Server URL
+SERVER_URL=http://127.0.0.1:{SERVER_PORT}
