--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ DISCORD_BOT_TOKEN=
 DISCORD_BOT_CLIENT_ID=
 DISCORD_BOT_CLIENT_SECRET=
 DISCORD_BOT_PUBLIC_KEY=
+SESSION_SECRET=barneystinson
 
 # Database Secrets
 MONGO_DB_URI=
