--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
