--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "express": "^5.0.0"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "concurrently": "^9.0.0",
     "cors": "^2.8.5",
     "discord.js": "^14.16.1",
+    "express-session": "^1.18.0",
     "globby": "^14.0.2",
     "mongoose": "^8.6.1"
   }
