--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.7.7",
     "concurrently": "^9.0.0",
     "cors": "^2.8.5",
+    "discord-api-types": "^0.37.100",
     "discord.js": "^14.16.1",
     "express-session": "^1.18.0",
     "globby": "^14.0.2",
