Updated Environment Example

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ DISCORD_BOT_CLIENT_SECRET=
 DISCORD_BOT_PUBLIC_KEY=
 SESSION_SECRET=barneystinson
 
+# Discord BOT Owner Information
+OWNER_ID=
+
 # Database Secrets
 MONGO_DB_URI=
 
