--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "concurrently": "^9.0.0",
     "cors": "^2.8.5",
     "discord-api-types": "^0.37.100",
+    "discord-player": "^6.7.1",
     "discord.js": "^14.16.1",
     "express-session": "^1.18.0",
     "globby": "^14.0.2",
