Added Birthdays Command

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ OWNER_ID=
 
 # Database Secrets
 MONGO_DB_URI=
+MONGO_DB_NAME=discortbotdb
+MONGO_DB_COLLECTION_NAME=discortbotcollection
 
 # AI Secrets
 OPENAI_API_KEY=
