--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "discord.js": "^14.16.1",
     "express-session": "^1.18.0",
     "globby": "^14.0.2",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "node-cron": "^3.0.3"
   }
 }
