--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,8 @@ SESSION_SECRET=barneystinson
 OWNER_ID=
 
 # Database Secrets
-MONGO_DB_URI=
-MONGO_DB_NAME=discortbotdb
-MONGO_DB_COLLECTION_NAME=discortbotcollection
+MONGO_DB_NAME=discordbotdb
+MONGO_DB_URI=mongodb+srv://username:password@clusterip/discordbotdb?retryWrites=true&w=majority&appName=appName
 
 # AI Secrets
 OPENAI_API_KEY=
