--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "globals": "^15.9.0"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.17.0",
+    "@google/generative-ai": "^0.19.0",
+    "@napi-rs/canvas": "^0.1.56",
     "axios": "^1.7.7",
     "concurrently": "^9.0.0",
     "cors": "^2.8.5",
@@ -35,7 +38,9 @@
     "discord.js": "^14.16.1",
     "express-session": "^1.18.0",
     "globby": "^14.0.2",
+    "libsodium-wrappers": "^0.7.15",
     "mongoose": "^8.6.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "openai": "^4.63.0"
   }
 }
