--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@discord-player/extractor": "^4.5.1",
     "@discordjs/voice": "^0.17.0",
+    "@distube/ytdl-core": "^4.14.4",
     "@google/generative-ai": "^0.19.0",
     "@napi-rs/canvas": "^0.1.56",
     "axios": "^1.7.7",
@@ -38,6 +39,7 @@
     "cors": "^2.8.5",
     "discord-api-types": "^0.37.100",
     "discord-player": "^6.7.1",
+    "discord-player-youtubei": "^1.3.2",
     "discord.js": "^14.16.1",
     "express-session": "^1.18.0",
     "ffmpeg-static": "^5.2.0",
@@ -46,6 +48,9 @@
     "mediaplex": "^0.0.9",
     "mongoose": "^8.6.1",
     "node-cron": "^3.0.3",
-    "openai": "^4.63.0"
+    "openai": "^4.63.0",
+    "play-dl": "^1.9.7",
+    "youtube-ext": "^1.1.25",
+    "ytdl-core": "^4.11.5"
   }
 }
